@@ -351,6 +351,16 @@ To visit the group please click on the following link:
 		"widgets:group_news:settings:group_icon_size:small" => "Small",
 		"widgets:group_news:settings:group_icon_size:medium" => "Medium",
 		
+		// quick start discussion
+		'group_tools:widgets:start_discussion:title' => "Start a discussion",
+		'group_tools:widgets:start_discussion:description' => "Quickly start a discussion is a selected group",
+		
+		'group_tools:widgets:start_discussion:login_required' => "In order to use this widget you need to be logged in",
+		'group_tools:widgets:start_discussion:membership_required' => "You must be a member of at least one group in order to use this widget. You can find interesting groups %shere%s.",
+		
+		'group_tools:forms:discussion:quick_start:group' => "Select a group for this discussion",
+		'' => "",
+		'' => "",
 	);
 	
 	add_translation("en", $english);
