@@ -1,0 +1,48 @@
+<?php
+
+	$widget = elgg_extract("entity", $vars);
+	
+	// check if logged if
+	if ($user = elgg_get_logged_in_user_entity()) {
+		$owner = $widget->getOwnerEntity();
+		
+		if ($group_membership = get_users_membership($user->getGUID())) {
+			$selected_group = ELGG_ENTITIES_ANY_VALUE;
+			if (elgg_instanceof($owner, "group")) {
+				// preselect the current group
+				$selected_group = $owner->getGUID();
+			}
+			
+			$group_selection_options = array();
+			$group_access_options = array();
+			
+			foreach($group_membership as $group) {
+				$group_selection_options[$group->getGUID()] = $group->name;
+				$group_access_options[$group->group_acl] = $group->getGUID();
+			}
+			// sort the groups by name
+			natcasesort($group_selection_options);
+			
+			$form_vars = array(
+				"id" => "group-tools-start-discussion-widget-form",
+				"action" => "action/discussion/save"
+			);
+			$body_vars = array(
+				"groups" => $group_selection_options,
+				"access" => $group_access_options,
+				"container_guid" => $selected_group
+			);
+			
+			echo elgg_view_form("discussion/quick_start",  $form_vars, $body_vars);
+		} else {
+			// you must join a group in order to use this widget
+			$link_start = "<a href='" . elgg_get_site_url() . "/groups/all'>";
+			$link_end = "</a>";
+			
+			$text = elgg_echo("group_tools:widgets:start_discussion:membership_required", array($link_start, $link_end));
+			echo elgg_view("output/longtext", array("value" => $text));
+		}
+	} else {
+		// you have to be logged in in order to use this widget
+		echo elgg_view("output/longtext", array("value" => elgg_echo("group_tools:widgets:start_discussion:login_required")));
+	}
